--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 pbr>=2.0.0  # Apache-2.0
 PyYAML>=3.10.0  # MIT
 six>=1.9.0  # MIT
-Jinja2>=2.8,!=2.9.0,!=2.9.1,!=2.9.2,!=2.9.3,!=2.9.4  # BSD License (3 clause)
+Jinja2==2.11.2
 requests # Apache-2.0
 python-bugzilla>=2.1.0
 pygerrit>=1.0.0
